Fix to align 3rd column code with content and reformat of affected content

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -849,7 +849,14 @@ body:not(.no-literate) .content img[alt="Connection sequence"],
       clear: both;
     }
 
-    body:not(.no-literate) .content img[alt="Connection sequence"],
+    div.code-toolbar {
+      position: relative;
+      float: left;
+      clear: right;
+      width: 55%;
+    }
+
+body:not(.no-literate) .content img[alt="Connection sequence"],
     body:not(.no-literate) .content img[alt="Photon Reset Modes"]
     {
       background: transparent;
